--- a/WebContent/Resource/css/top.css
+++ b/WebContent/Resource/css/top.css
@@ -1,4 +1,4 @@
-#top_bar {margin: 0px; height: 25px; background-color: lightgray;}
+#top_bar {margin: 0px; height: 25px; background-color: #494693;}
 
 #middle_bar {margin: 0px; height: 160px;}
 
