--- a/WebContent/Resource/css/signup.css
+++ b/WebContent/Resource/css/signup.css
@@ -1,4 +1,4 @@
-#signup-page {margin-top: 80px; height: 1500px; border: 1px solid black;}
+#signup-page {margin-top: 80px; height: 1450px;}
 
 #signup-title {margin-bottom: 30px; padding: 0px; height: 50px;}
 #signup-title>h4 {width: 100%; line-height: 45px; text-align: center;}
@@ -33,4 +33,5 @@ span {color: crimson;}
 
 .ec-base-box.typeThinBg {display: block;}
 
-#signup-btn {margin: 100px auto auto auto; width: 900px; height: 100px; text-align: center;}
+#signup-btn {margin: 40px auto auto auto; width: 900px; height: 100px; text-align: center;}
+#sign-join, #sign-reset {width: 100px; height: 30px; background-color: lightgray; color: dimgray; border: 0px; border-radius: 5px;}
