--- a/WebContent/Resource/css/profile.css
+++ b/WebContent/Resource/css/profile.css
@@ -1,6 +1,19 @@
-#profile {margin-top: 80px; height: 1000px; border: 1px solid black;}
+#profile {margin-top: 80px; height: 850px; border: 1px solid black;}
 
 #profile-title {margin-bottom: 30px; padding: 0px; height: 50px;}
 #profile-title>h4 {width: 100%; line-height: 45px; text-align: center;}
 
 #profile-inputbox {margin: auto; padding: 40px; width: 900px; height: 650px; background-color: #F6F6F6;}
+
+
+
+
+
+
+
+
+
+
+
+#modify-btn {margin: 40px auto auto auto; width: 900px; height: 100px; text-align: center;}
+#profile-modi, #profile-re {width: 100px; height: 30px; background-color: lightgray; color: dimgray; border: 0px; border-radius: 5px;}
