--- a/WebContent/Resource/css/cart.css
+++ b/WebContent/Resource/css/cart.css
@@ -1,4 +1,4 @@
-#cart-page {margin-top: 80px; height: 800px; border: 1px solid black;}
+#cart-page {margin-top: 80px; height: 800px;}
 
 #cart-title {margin-bottom: 30px; padding: 0px; height: 50px;}
 #cart-title>h4 {width: 100%; line-height: 45px; text-align: center;}
@@ -9,7 +9,17 @@
 #all-delete {margin-top: 20px; width: 1120px; text-align: right;}
 #all-btn {width: 130px; height: 20px; font-size: 11px; background-color: lightgray; color: dimgray; border: 0px; border-radius: 5px;}
 
-#table {margin-top: 10px; width: 100%; text-align: center;}
+.cart-table {margin-top: 10px; width: 100%; text-align: center;}
 .my-item {height: 100px; border-bottom: 1px solid lightgray;}
-.my-item>td {border: 1px solid red;}
-.item-img {width: 100px; height: 100px; text-align: center; border: 1px solid blue;}
+.item-img {width: 80px; height: 90px; text-align: center;}
+
+#check-delete {margin-bottom: 100px;}
+#check-btn {margin-top: 8px; width: 80px; height: 20px; font-size: 11px; background-color: lightgray; color: dimgray; border: 0px; border-radius: 5px;}
+
+#cart-money {width: 100%; text-align: center;}
+
+#money-btn {margin-top: 20px; width: 700px; text-align: right;}
+#gogo-btn {margin-top: 20px; width: 440px; text-align: right;}
+
+.select-btn {width: 130px; height: 30px; font-size: 11px; background-color: lightgray; color: dimgray; border: 0px; border-radius: 5px;}
+.gogo-btn {width: 130px; height: 30px; font-size: 11px; background-color: white; color: dimgray; border: 1px solid lightgray; border-radius: 5px;}
