--- a/WebContent/Resource/css/cart.css
+++ b/WebContent/Resource/css/cart.css
@@ -1,4 +1,4 @@
-#cart-page {margin-top: 80px; height: 800px;}
+#cart-page {margin-top: 80px; height: 1000px; border: 1px solid black;}
 
 #cart-title {margin-bottom: 30px; padding: 0px; height: 50px;}
 #cart-title>h4 {width: 100%; line-height: 45px; text-align: center;}
