--- a/WebContent/Resource/css/top.css
+++ b/WebContent/Resource/css/top.css
@@ -5,7 +5,7 @@
 #title {padding: 30px; text-align: center; font-family: 'Alata', sans-serif;}
 
 #img_bar {padding: 50px 0px 50px 0px;}
-#img_bar>a>img {width: 50px; height: 50px;}
+#img_bar>img {width: 50px; height: 50px;}
 
 #top-two {padding: 0px;}
 
