--- a/WebContent/Resource/css/cart.css
+++ b/WebContent/Resource/css/cart.css
@@ -14,6 +14,7 @@
 
 #check-delete {margin-bottom: 100px;}
 #check-btn {margin-top: 8px; width: 80px; height: 20px; font-size: 11px; background-color: lightgray; color: dimgray; border: 0px; border-radius: 5px;}
+#updateBtn {margin-top: 8px; width: 80px; height: 20px; font-size: 11px; background-color: lightgray; color: dimgray; border: 0px; border-radius: 5px;}
 #all-btn{margin-top: 8px; margin-left: 8px; width: 120px; height: 20px; font-size: 11px; background-color: lightgray; color: dimgray; border: 0px; border-radius: 5px;}
 #cart-money {width: 100%; text-align: center;}
 
