--- a/WebContent/Resource/css/profile.css
+++ b/WebContent/Resource/css/profile.css
@@ -1,14 +1,11 @@
-#profile {margin-top: 80px; height: 850px; border: 1px solid black;}
+
+
+#profile-inputbox>div {display:block;}
+
+#profile {margin-top: 80px; height: 1450px;}
 
 #profile-title {margin-bottom: 30px; padding: 0px; height: 50px;}
 #profile-title>h4 {width: 100%; line-height: 45px; text-align: center;}
-
-#profile-inputbox {margin: auto; padding: 40px; width: 900px; height: 650px; background-color: #F6F6F6;}
-
-
-
-
-
 
 
 
