--- a/WebContent/Resource/css/enquiry.css
+++ b/WebContent/Resource/css/enquiry.css
@@ -1,4 +1,4 @@
-#enquiry-page {margin-top: 80px; height: 700px; border: 1px solid black;}
+#enquiry-page {margin-top: 80px;}
 
 #enquiry-title {margin-bottom: 30px; padding: 0px; height: 50px;}
 #enquiry-title>h4 {width: 100%; line-height: 45px; text-align: center;}
