--- a/WebContent/Resource/css/bottom.css
+++ b/WebContent/Resource/css/bottom.css
@@ -2,10 +2,10 @@
 
 h6 {font-size: 14px;}
 
-#others {padding: 0px; height: 300px; background-color: lightgray;}
+#others {padding: 0px; height: 300px;}
 
 #customer {padding: 20px;}
-#phone {margin-bottom: 20px; color: #7D4E36;}
+#phone {margin-bottom: 20px;}
 
 #bank {padding: 20px;}
 
