--- a/WebContent/Resource/css/home.css
+++ b/WebContent/Resource/css/home.css
@@ -1,5 +1,5 @@
 #homebody{width:1140px; margin:auto;}
-#main-event {margin-bottom: 50px; width:1140px;}
+#main-event {margin-bottom: 50px; width:1140px; padding:0px;}
 
 #main {margin-top: 20px; margin-bottom: 10px; padding: 0px; height: 500px;}
 #main>a>img {width:1140px; height: 500px;}
